@@ -1,3 +1,8 @@
+2010-03-08  Kenichi Handa  <handa@m17n.org>
+
+	* language/misc-lang.el (windows-1256): New coding system.
+	(cp1256): New alias of windows-1256.
+
 2010-03-03  Štěpán Němec  <stepnem@gmail.com>  (tiny change)
 
 	* subr.el (momentary-string-display): Don't overwrite the MESSAGE
